Parser.output
   0  $accept : %entry% $end

   1  start : program T_EOF

   2  program : program declaration
   3          | declaration

   4  declaration : variable_declaration
   5              | function_declaration
   6              | function_definition

   7  variable_declaration : type_t declarators T_SEMIC

   8  type_t : basic_type star

   9  star :
  10       | star T_TIMES

  11  basic_type : T_INTTYPE
  12             | T_CHARTYPE
  13             | T_BOOLTYPE
  14             | T_DOUBLETYPE

  15  declarator : T_ID
  16             | T_ID T_LSB constant_expression T_RSB

  17  declarators : declarator T_COMMA declarators
  18              | declarator

  19  function_declaration : type_t T_ID T_LP T_RP T_SEMIC
  20                       | type_t T_ID T_LP parameter_list T_RP T_SEMIC
  21                       | T_VOID T_ID T_LP T_RP T_SEMIC
  22                       | T_VOID T_ID T_LP parameter_list T_RP T_SEMIC

  23  parameter_list : parameter parameters

  24  parameters :
  25             | T_COMMA parameter parameters

  26  parameter : T_BYREF type_t T_ID
  27            | type_t T_ID

  28  function_definition : type_t T_ID T_LP T_RP T_LB declarations statements T_RB
  29                      | type_t T_ID T_LP parameter_list T_RP T_LB declarations statements T_RB
  30                      | T_VOID T_ID T_LP T_RP T_LB declarations statements T_RB
  31                      | T_VOID T_ID T_LP parameter_list T_RP T_LB declarations statements T_RB

  32  declarations :
  33               | declaration declarations

  34  statements :
  35             | statements statement

  36  statement : T_SEMIC
  37            | expression T_SEMIC
  38            | T_LB statements T_RB
  39            | T_IF T_LP expression T_RP statement
  40            | T_IF T_LP expression T_RP statement T_ELSE statement
  41            | optional_t_id_t_colon T_FOR T_LP optional_expression T_SEMIC optional_expression T_SEMIC optional_expression T_RP statement
  42            | T_CONTINUE T_SEMIC
  43            | T_CONTINUE T_ID T_SEMIC
  44            | T_BREAK T_SEMIC
  45            | T_BREAK T_ID T_SEMIC
  46            | T_RETURN T_SEMIC
  47            | T_RETURN expression T_SEMIC

  48  optional_t_id_t_colon :
  49                        | T_ID T_COLON

  50  optional_expression :
  51                      | expression

  52  expression : T_ID
  53             | T_LP expression T_RP
  54             | T_TRUE
  55             | T_FALSE
  56             | T_NULL
  57             | T_INT
  58             | T_CHAR
  59             | T_DOUBLE
  60             | T_STRING
  61             | T_ID T_LP T_RP
  62             | T_ID T_LP expression_list T_RP
  63             | expression T_LSB expression T_RSB
  64             | unary_operator expression
  65             | expression binary_operator expression
  66             | expression T_COMMA expression
  67             | unary_assignment expression
  68             | expression unary_assignment
  69             | expression binary_assignment expression
  70             | T_LP type_t T_RP expression
  71             | expression T_QUES expression T_COLON expression
  72             | T_NEW type_t
  73             | T_NEW basic_type star T_TIMES expression
  74             | T_NEW type_t T_LSB expression T_RSB
  75             | T_DELETE expression

  76  expression_list : expression
  77                  | expression_list T_COMMA expression

  78  constant_expression : expression

  79  unary_operator : T_AMP
  80                 | T_TIMES
  81                 | T_PLUS
  82                 | T_MINUS
  83                 | T_EX

  84  binary_operator : T_TIMES
  85                  | T_DIV
  86                  | T_MOD
  87                  | T_PLUS
  88                  | T_MINUS
  89                  | T_BIG
  90                  | T_SMALL
  91                  | T_BEQ
  92                  | T_SEQ
  93                  | T_EQ
  94                  | T_DIF
  95                  | T_AND
  96                  | T_OR

  97  unary_assignment : T_PP
  98                   | T_MM

  99  binary_assignment : T_ASS
 100                    | T_TEQ
 101                    | T_DEQ
 102                    | T_MEQ
 103                    | T_PEQ
 104                    | T_MIEQ

 105  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (105)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	T_VOID  shift 7
	.  error

	start  goto 8
	program  goto 9
	declaration  goto 10
	variable_declaration  goto 11
	function_declaration  goto 12
	function_definition  goto 13
	type_t  goto 14
	basic_type  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	basic_type : T_BOOLTYPE .  (13)

	.  reduce 13


state 4
	basic_type : T_CHARTYPE .  (12)

	.  reduce 12


state 5
	basic_type : T_DOUBLETYPE .  (14)

	.  reduce 14


state 6
	basic_type : T_INTTYPE .  (11)

	.  reduce 11


state 7
	function_declaration : T_VOID . T_ID T_LP T_RP T_SEMIC  (21)
	function_declaration : T_VOID . T_ID T_LP parameter_list T_RP T_SEMIC  (22)
	function_definition : T_VOID . T_ID T_LP T_RP T_LB declarations statements T_RB  (30)
	function_definition : T_VOID . T_ID T_LP parameter_list T_RP T_LB declarations statements T_RB  (31)

	T_ID  shift 16
	.  error


state 8
	%entry% : '\001' start .  (105)

	.  reduce 105


state 9
	start : program . T_EOF  (1)
	program : program . declaration  (2)

	T_EOF  shift 17
	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	T_VOID  shift 7
	.  error

	declaration  goto 18
	variable_declaration  goto 11
	function_declaration  goto 12
	function_definition  goto 13
	type_t  goto 14
	basic_type  goto 15


state 10
	program : declaration .  (3)

	.  reduce 3


state 11
	declaration : variable_declaration .  (4)

	.  reduce 4


state 12
	declaration : function_declaration .  (5)

	.  reduce 5


state 13
	declaration : function_definition .  (6)

	.  reduce 6


state 14
	variable_declaration : type_t . declarators T_SEMIC  (7)
	function_declaration : type_t . T_ID T_LP T_RP T_SEMIC  (19)
	function_declaration : type_t . T_ID T_LP parameter_list T_RP T_SEMIC  (20)
	function_definition : type_t . T_ID T_LP T_RP T_LB declarations statements T_RB  (28)
	function_definition : type_t . T_ID T_LP parameter_list T_RP T_LB declarations statements T_RB  (29)

	T_ID  shift 19
	.  error

	declarators  goto 20
	declarator  goto 21


state 15
	type_t : basic_type . star  (8)
	star : .  (9)

	.  reduce 9

	star  goto 22


state 16
	function_declaration : T_VOID T_ID . T_LP T_RP T_SEMIC  (21)
	function_declaration : T_VOID T_ID . T_LP parameter_list T_RP T_SEMIC  (22)
	function_definition : T_VOID T_ID . T_LP T_RP T_LB declarations statements T_RB  (30)
	function_definition : T_VOID T_ID . T_LP parameter_list T_RP T_LB declarations statements T_RB  (31)

	T_LP  shift 23
	.  error


state 17
	start : program T_EOF .  (1)

	.  reduce 1


state 18
	program : program declaration .  (2)

	.  reduce 2


state 19
	declarator : T_ID .  (15)
	declarator : T_ID . T_LSB constant_expression T_RSB  (16)
	function_declaration : type_t T_ID . T_LP T_RP T_SEMIC  (19)
	function_declaration : type_t T_ID . T_LP parameter_list T_RP T_SEMIC  (20)
	function_definition : type_t T_ID . T_LP T_RP T_LB declarations statements T_RB  (28)
	function_definition : type_t T_ID . T_LP parameter_list T_RP T_LB declarations statements T_RB  (29)

	T_LP  shift 24
	T_LSB  shift 25
	T_SEMIC  reduce 15
	T_COMMA  reduce 15


state 20
	variable_declaration : type_t declarators . T_SEMIC  (7)

	T_SEMIC  shift 26
	.  error


state 21
	declarators : declarator . T_COMMA declarators  (17)
	declarators : declarator .  (18)

	T_COMMA  shift 27
	T_SEMIC  reduce 18


state 22
	type_t : basic_type star .  (8)
	star : star . T_TIMES  (10)

	T_TIMES  shift 28
	T_ID  reduce 8
	T_RP  reduce 8


state 23
	function_declaration : T_VOID T_ID T_LP . T_RP T_SEMIC  (21)
	function_declaration : T_VOID T_ID T_LP . parameter_list T_RP T_SEMIC  (22)
	function_definition : T_VOID T_ID T_LP . T_RP T_LB declarations statements T_RB  (30)
	function_definition : T_VOID T_ID T_LP . parameter_list T_RP T_LB declarations statements T_RB  (31)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	T_BYREF  shift 29
	T_RP  shift 30
	.  error

	type_t  goto 31
	basic_type  goto 15
	parameter_list  goto 32
	parameter  goto 33


state 24
	function_declaration : type_t T_ID T_LP . T_RP T_SEMIC  (19)
	function_declaration : type_t T_ID T_LP . parameter_list T_RP T_SEMIC  (20)
	function_definition : type_t T_ID T_LP . T_RP T_LB declarations statements T_RB  (28)
	function_definition : type_t T_ID T_LP . parameter_list T_RP T_LB declarations statements T_RB  (29)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	T_BYREF  shift 29
	T_RP  shift 34
	.  error

	type_t  goto 31
	basic_type  goto 15
	parameter_list  goto 35
	parameter  goto 33


state 25
	declarator : T_ID T_LSB . constant_expression T_RSB  (16)

	T_PLUS  shift 36
	T_MINUS  shift 37
	T_TIMES  shift 38
	T_ID  shift 39
	T_INT  shift 40
	T_DOUBLE  shift 41
	T_CHAR  shift 42
	T_STRING  shift 43
	T_DELETE  shift 44
	T_FALSE  shift 45
	T_NEW  shift 46
	T_NULL  shift 47
	T_TRUE  shift 48
	T_PP  shift 49
	T_MM  shift 50
	T_AMP  shift 51
	T_EX  shift 52
	T_LP  shift 53
	.  error

	constant_expression  goto 54
	expression  goto 55
	unary_operator  goto 56
	unary_assignment  goto 57


state 26
	variable_declaration : type_t declarators T_SEMIC .  (7)

	.  reduce 7


state 27
	declarators : declarator T_COMMA . declarators  (17)

	T_ID  shift 58
	.  error

	declarators  goto 59
	declarator  goto 21


state 28
	star : star T_TIMES .  (10)

	.  reduce 10


state 29
	parameter : T_BYREF . type_t T_ID  (26)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	.  error

	type_t  goto 60
	basic_type  goto 15


state 30
	function_declaration : T_VOID T_ID T_LP T_RP . T_SEMIC  (21)
	function_definition : T_VOID T_ID T_LP T_RP . T_LB declarations statements T_RB  (30)

	T_SEMIC  shift 61
	T_LB  shift 62
	.  error


state 31
	parameter : type_t . T_ID  (27)

	T_ID  shift 63
	.  error


state 32
	function_declaration : T_VOID T_ID T_LP parameter_list . T_RP T_SEMIC  (22)
	function_definition : T_VOID T_ID T_LP parameter_list . T_RP T_LB declarations statements T_RB  (31)

	T_RP  shift 64
	.  error


state 33
	parameter_list : parameter . parameters  (23)
	parameters : .  (24)

	T_COMMA  shift 65
	T_RP  reduce 24

	parameters  goto 66


state 34
	function_declaration : type_t T_ID T_LP T_RP . T_SEMIC  (19)
	function_definition : type_t T_ID T_LP T_RP . T_LB declarations statements T_RB  (28)

	T_SEMIC  shift 67
	T_LB  shift 68
	.  error


state 35
	function_declaration : type_t T_ID T_LP parameter_list . T_RP T_SEMIC  (20)
	function_definition : type_t T_ID T_LP parameter_list . T_RP T_LB declarations statements T_RB  (29)

	T_RP  shift 69
	.  error


state 36
	unary_operator : T_PLUS .  (81)

	.  reduce 81


state 37
	unary_operator : T_MINUS .  (82)

	.  reduce 82


state 38
	unary_operator : T_TIMES .  (80)

	.  reduce 80


state 39
	expression : T_ID .  (52)
	expression : T_ID . T_LP T_RP  (61)
	expression : T_ID . T_LP expression_list T_RP  (62)

	T_LP  shift 70
	T_QUES  reduce 52
	T_PLUS  reduce 52
	T_MINUS  reduce 52
	T_TIMES  reduce 52
	T_DIV  reduce 52
	T_MOD  reduce 52
	T_SEMIC  reduce 52
	T_PP  reduce 52
	T_MM  reduce 52
	T_AND  reduce 52
	T_OR  reduce 52
	T_ASS  reduce 52
	T_PEQ  reduce 52
	T_MIEQ  reduce 52
	T_TEQ  reduce 52
	T_DEQ  reduce 52
	T_MEQ  reduce 52
	T_COMMA  reduce 52
	T_EQ  reduce 52
	T_DIF  reduce 52
	T_BIG  reduce 52
	T_SMALL  reduce 52
	T_BEQ  reduce 52
	T_SEQ  reduce 52
	T_COLON  reduce 52
	T_RP  reduce 52
	T_RSB  reduce 52
	T_LSB  reduce 52


state 40
	expression : T_INT .  (57)

	.  reduce 57


state 41
	expression : T_DOUBLE .  (59)

	.  reduce 59


state 42
	expression : T_CHAR .  (58)

	.  reduce 58


state 43
	expression : T_STRING .  (60)

	.  reduce 60


state 44
	expression : T_DELETE . expression  (75)

	T_PLUS  shift 36
	T_MINUS  shift 37
	T_TIMES  shift 38
	T_ID  shift 39
	T_INT  shift 40
	T_DOUBLE  shift 41
	T_CHAR  shift 42
	T_STRING  shift 43
	T_DELETE  shift 44
	T_FALSE  shift 45
	T_NEW  shift 46
	T_NULL  shift 47
	T_TRUE  shift 48
	T_PP  shift 49
	T_MM  shift 50
	T_AMP  shift 51
	T_EX  shift 52
	T_LP  shift 53
	.  error

	expression  goto 71
	unary_operator  goto 56
	unary_assignment  goto 57


state 45
	expression : T_FALSE .  (55)

	.  reduce 55


state 46
	expression : T_NEW . type_t  (72)
	expression : T_NEW . basic_type star T_TIMES expression  (73)
	expression : T_NEW . type_t T_LSB expression T_RSB  (74)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	.  error

	type_t  goto 72
	basic_type  goto 73


state 47
	expression : T_NULL .  (56)

	.  reduce 56


state 48
	expression : T_TRUE .  (54)

	.  reduce 54


state 49
	unary_assignment : T_PP .  (97)

	.  reduce 97


state 50
	unary_assignment : T_MM .  (98)

	.  reduce 98


state 51
	unary_operator : T_AMP .  (79)

	.  reduce 79


state 52
	unary_operator : T_EX .  (83)

	.  reduce 83


state 53
	expression : T_LP . expression T_RP  (53)
	expression : T_LP . type_t T_RP expression  (70)

	T_PLUS  shift 36
	T_MINUS  shift 37
	T_TIMES  shift 38
	T_ID  shift 39
	T_INT  shift 40
	T_DOUBLE  shift 41
	T_CHAR  shift 42
	T_STRING  shift 43
	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DELETE  shift 44
	T_DOUBLETYPE  shift 5
	T_FALSE  shift 45
	T_INTTYPE  shift 6
	T_NEW  shift 46
	T_NULL  shift 47
	T_TRUE  shift 48
	T_PP  shift 49
	T_MM  shift 50
	T_AMP  shift 51
	T_EX  shift 52
	T_LP  shift 53
	.  error

	type_t  goto 74
	basic_type  goto 15
	expression  goto 75
	unary_operator  goto 56
	unary_assignment  goto 57


state 54
	declarator : T_ID T_LSB constant_expression . T_RSB  (16)

	T_RSB  shift 76
	.  error


state 55
	expression : expression . T_LSB expression T_RSB  (63)
	expression : expression . binary_operator expression  (65)
	expression : expression . T_COMMA expression  (66)
	expression : expression . unary_assignment  (68)
	expression : expression . binary_assignment expression  (69)
	expression : expression . T_QUES expression T_COLON expression  (71)
	constant_expression : expression .  (78)

	T_QUES  shift 77
	T_PLUS  shift 78
	T_MINUS  shift 79
	T_TIMES  shift 80
	T_DIV  shift 81
	T_MOD  shift 82
	T_PP  shift 49
	T_MM  shift 50
	T_AND  shift 83
	T_OR  shift 84
	T_ASS  shift 85
	T_PEQ  shift 86
	T_MIEQ  shift 87
	T_TEQ  shift 88
	T_DEQ  shift 89
	T_MEQ  shift 90
	T_COMMA  shift 91
	T_EQ  shift 92
	T_DIF  shift 93
	T_BIG  shift 94
	T_SMALL  shift 95
	T_BEQ  shift 96
	T_SEQ  shift 97
	T_LSB  shift 98
	T_RSB  reduce 78

	binary_operator  goto 99
	unary_assignment  goto 100
	binary_assignment  goto 101


state 56
	expression : unary_operator . expression  (64)

	T_PLUS  shift 36
	T_MINUS  shift 37
	T_TIMES  shift 38
	T_ID  shift 39
	T_INT  shift 40
	T_DOUBLE  shift 41
	T_CHAR  shift 42
	T_STRING  shift 43
	T_DELETE  shift 44
	T_FALSE  shift 45
	T_NEW  shift 46
	T_NULL  shift 47
	T_TRUE  shift 48
	T_PP  shift 49
	T_MM  shift 50
	T_AMP  shift 51
	T_EX  shift 52
	T_LP  shift 53
	.  error

	expression  goto 102
	unary_operator  goto 56
	unary_assignment  goto 57


state 57
	expression : unary_assignment . expression  (67)

	T_PLUS  shift 36
	T_MINUS  shift 37
	T_TIMES  shift 38
	T_ID  shift 39
	T_INT  shift 40
	T_DOUBLE  shift 41
	T_CHAR  shift 42
	T_STRING  shift 43
	T_DELETE  shift 44
	T_FALSE  shift 45
	T_NEW  shift 46
	T_NULL  shift 47
	T_TRUE  shift 48
	T_PP  shift 49
	T_MM  shift 50
	T_AMP  shift 51
	T_EX  shift 52
	T_LP  shift 53
	.  error

	expression  goto 103
	unary_operator  goto 56
	unary_assignment  goto 57


state 58
	declarator : T_ID .  (15)
	declarator : T_ID . T_LSB constant_expression T_RSB  (16)

	T_LSB  shift 25
	T_SEMIC  reduce 15
	T_COMMA  reduce 15


state 59
	declarators : declarator T_COMMA declarators .  (17)

	.  reduce 17


state 60
	parameter : T_BYREF type_t . T_ID  (26)

	T_ID  shift 104
	.  error


state 61
	function_declaration : T_VOID T_ID T_LP T_RP T_SEMIC .  (21)

	.  reduce 21


state 62
	function_definition : T_VOID T_ID T_LP T_RP T_LB . declarations statements T_RB  (30)
	declarations : .  (32)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	T_VOID  shift 7
	T_PLUS  reduce 32
	T_MINUS  reduce 32
	T_TIMES  reduce 32
	T_ID  reduce 32
	T_INT  reduce 32
	T_DOUBLE  reduce 32
	T_CHAR  reduce 32
	T_STRING  reduce 32
	T_IF  reduce 32
	T_BREAK  reduce 32
	T_CONTINUE  reduce 32
	T_DELETE  reduce 32
	T_FALSE  reduce 32
	T_NEW  reduce 32
	T_NULL  reduce 32
	T_RETURN  reduce 32
	T_TRUE  reduce 32
	T_FOR  reduce 32
	T_SEMIC  reduce 32
	T_PP  reduce 32
	T_MM  reduce 32
	T_AMP  reduce 32
	T_EX  reduce 32
	T_LP  reduce 32
	T_RB  reduce 32
	T_LB  reduce 32

	declaration  goto 105
	variable_declaration  goto 11
	function_declaration  goto 12
	function_definition  goto 13
	type_t  goto 14
	basic_type  goto 15
	declarations  goto 106


state 63
	parameter : type_t T_ID .  (27)

	.  reduce 27


state 64
	function_declaration : T_VOID T_ID T_LP parameter_list T_RP . T_SEMIC  (22)
	function_definition : T_VOID T_ID T_LP parameter_list T_RP . T_LB declarations statements T_RB  (31)

	T_SEMIC  shift 107
	T_LB  shift 108
	.  error


state 65
	parameters : T_COMMA . parameter parameters  (25)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	T_BYREF  shift 29
	.  error

	type_t  goto 31
	basic_type  goto 15
	parameter  goto 109


state 66
	parameter_list : parameter parameters .  (23)

	.  reduce 23


state 67
	function_declaration : type_t T_ID T_LP T_RP T_SEMIC .  (19)

	.  reduce 19


state 68
	function_definition : type_t T_ID T_LP T_RP T_LB . declarations statements T_RB  (28)
	declarations : .  (32)

	T_BOOLTYPE  shift 3
	T_CHARTYPE  shift 4
	T_DOUBLETYPE  shift 5
	T_INTTYPE  shift 6
	T_VOID  shift 7
	T_PLUS  reduce 32
	T_MINUS  reduce 32
	T_TIMES  reduce 32
	T_ID  reduce 32
	T_INT  reduce 32
	T_DOUBLE  reduce 32
	T_CHAR  reduce 32
	T_STRING  reduce 32
	T_IF  reduce 32
	T_BREAK  reduce 32
	T_CONTINUE  reduce 32
	T_DELETE  reduce 32
	T_FALSE  reduce 32
	T_NEW  reduce 32
	T_NULL  reduce 32
	T_RETURN  reduce 32
	T_TRUE  reduce 32
	T_FOR  reduce 32
	T_SEMIC  reduce 32
	T_PP  reduce 32
	T_MM  reduce 32
	T_AMP  reduce 32
	T_EX  reduce 32
	T_LP  reduce 32
	T_RB  reduce 32
	T_LB  reduce 32

	declaration  goto 105
	variable_declaration  goto 11
	function_declaration  goto 12
	function_definition  goto 13
	type_t  goto 14
	basic_type  goto 15
	declarations  goto 110


state 69
	function_declaration : type_t T_ID T_LP parameter_list T_RP . T_SEMIC  (20)
	function_definition : type_t T_ID T_LP parameter_list T_RP . T_LB declarations statements T_RB  (29)

	T_SEMIC  shift 111
	T_LB  shift 112
	.  error


state 70
	expression : T_ID T_LP . T_RP  (61)
	expression : T_ID T_LP . expression_list T_RP  (62)
